TestWebAPI/TestWebAPI/Kubernetes/hostname_file.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-file
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hostname-file
  template:
    metadata:
      labels:
        app: hostname-file
        version: v1
    spec:
      volumes:
      - name: sansazurefile
        persistentVolumeClaim:
          claimName: sansazurefile
      containers:
      - image: sansaksdemo.azurecr.io/hostname:v2
        imagePullPolicy: Always
        name: hostname
        volumeMounts:
          - mountPath: "/www"
            name: sansazurefile
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hostname-file
  name: hostname-file
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: hostname-file
