TestWebAPI/TestWebAPI/Kubernetes/hostname_volume.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-volume
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname-volume
  template:
    metadata:
      labels:
        app: hostname-volume
        version: v1
    spec:
      volumes:
      - name: hostname-pvc
        persistentVolumeClaim:
          claimName: hostname-pvc
      containers:
      - image: sansaksdemo.azurecr.io/hostname:v2
        imagePullPolicy: Always
        name: hostname
        volumeMounts:
          - mountPath: "/www"
            name: hostname-pvc
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hostname-volume
  name: hostname-volume
spec:
  ports:
  - name: web
    port: 80
    protocol: TCP
    targetPort: 80
  type: LoadBalancer
  selector:
    app: hostname-volume
