TestWebAPI/TestWebAPI/Kubernetes/hostname_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hostname
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
  - host: hostname.295ac3d8e107490fa8bc.southindia.aksapp.io
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: hostname
            port: 
              number: 80
        
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hostname-in
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hostname
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: hostname
        version: v1
    spec:
      containers:
      - image: sansaksdemo.azurecr.io/hostname:v1
        imagePullPolicy: Always
        name: hostname
        resources: {}
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hostname
  name: hostname
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: hostname
  type: ClusterIP
